refactored click stats stuff and fixed some spacing stuff

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -98,6 +98,7 @@ footer {
 }
 
 #show-add-url-form {
+    margin-left: 10px;
     margin-top: 8px;
 }
 
