--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -78,5 +78,6 @@ footer {
 }
 
 #show-add-url-form {
+    margin-left: 10px;
     margin-top: 8px;
 }
